        - added =encoding to POD.
        - reworked Makefile.PL for clarity.
        - License updated to Artistic License v2.0.
        - added minimum perl version (5.006).
        - META tests no longer require specific versions.
        - change file dates changed to meet W3CDTF standards.
        - implemented Perl::Critic suggestions.

0.15    2010-09-26
        - added OAuth support to Identica access.
        - added better protection for failing commands.
        - removed password from example settings.
        - updated tests.
        - Now requires Net-Twitter-3.13009

0.14    2010-09-11
        - documentation fix for INI format example (thanks to Alan Haggai Alavi).
        - rewrite to Twitter.pm to use OAuth mechanism for logging in.
        - interface to plugins changed, now passes a config hash.
        - config hash now saves the home directory.
        - added META.json file and associated test.

0.13    2009-08-20
        - fixed requests with limits larger than 20.
        - suppressing 'command ok' messages.
        - refactored common code in to new functions
        - added user completion functionality.

0.12    2009-02-27
        - various documentation updates.
        - timelines are filtered through a pager (RR)
        - added completion for use command (RR)
        - fixed bug with configured message limits.
        - added user defined message formatting
        - added user defined terminal character width

        RR = Robert Rothenberg. Many thanks for the patches and ideas Rob.

0.11    2009-02-18
        - improved META.yml testing in 94metatest.t.
        - added plugin check for 'use' command.
        - fixed send_message and update so that single quotes are accepted, as
          Term::Shell was stripping them out :(
        - added 92disttest.t and 95changedate.t tests to the suite.
        - added Text::Wrap at Rob Rothenberg's suggestion to more neatly wrap
          the messages and replies listings.
