@@ -26,7 +26,6 @@
     "prereqs" : {
         "test" : {
             "requires": {
-                "IO::File": "0",
                 "Test::More": "0.70"
             },
             "recommends": {
@@ -40,14 +39,15 @@
         "runtime" : {
             "requires" : {
                 "perl": "5.006",
-                "Class::Accessor::Fast": "0",
                 "Carp": "0",
+                "Class::Accessor::Fast": "0",
                 "Config::Any": "0",
                 "File::Basename": "0",
                 "File::HomeDir": "0",
                 "File::Path": "0",
                 "FindBin": "0",
                 "Getopt::Long": "0",
+                "IO::File": "0",
                 "Module::Pluggable": "2.7",
                 "Net::Twitter": "3.13009",
                 "Pod::Usage": "0",
